--- a/styles/main.css
+++ b/styles/main.css
@@ -2,7 +2,129 @@
 body{
     font-family: helvetica, arial, sans-serif;
 	font-size:1em;
+    background-color: #3f4249;
 }
 h1, h2{
     font-family: 'Raleway', sans-serif;
+    color: #fff;
+}
+
+p{
+    color: #fff;
+}
+
+address{
+    color: #fff;
+}
+
+.container{
+    width: 100%;
+    margin: auto;
+    max-width: 1200px;
+    min-width: 600px;
+}
+
+nav ul li{
+    display: inline;
+    
+}
+
+nav ul{
+    padding-left: 0px;
+    list-style: none;
+}
+
+nav a{
+    text-decoration: none;
+}
+
+header{
+    background-color: #263248;	
+    border-radius: 8px;
+    display:flex;
+    text-align: center;
+    align-items: center;
+}
+
+nav li a{
+    text-decoration: none;	
+    color: #fff;	
+}
+
+nav li a:hover{
+    color: #7E8AA2;	
+}
+
+header h1 a{
+    color:#fff;
+    text-decoration: none;
+}
+header h1 a:hover{
+    text-decoration: underline;
+}
+#logo{
+    padding:10px;
+}
+
+section{
+    padding:0 10px 10px 0;
+}
+.sidebar{
+    padding:20px 40px;	
+    border:1px solid #ccc;
+    border-radius:8px;
+    margin-top: 70px;
+ }
+
+ main{
+    display:flex;
+    gap: 15px;
+}
+
+.resize-img{
+    width:100%;
+    height:100%;
+}
+
+footer{
+    border-top:1px solid #ccc;
+    margin:20px 10px 10px 0;
+    font-size:0.8em;
+    text-align:center;
+    font-style:italic;
+}
+
+table{
+    width:100%;
+    max-width: 600px;
+    min-width: 300px;
+}
+th, td{
+    padding: 10px 4px;
+    text-align: left;	
+}	
+th{
+    text-transform: uppercase;
+    border-bottom: 4px solid #000;	
+    background-color: #fff;	
+}
+tr:nth-child(odd){
+    background-color: #ccc;	
+}
+
+dt{
+    font-weight: bold;
+    border-top: 1px dashed #ccc;	
+    padding: 20px 0;	
+}
+dt:first-child{
+    border-top: none;
+}
+dd{
+    padding: 0 0 20px 0;
+}
+
+.left-float{
+    float:left;
+    padding:0 15px 15px 0;
 }
